cmake_minimum_required(VERSION 3.17)
project(SP2020 C)

set(CMAKE_C_STANDARD 99)


add_executable(task0 exercise2/task0.c)
add_executable(task1 exercise3/task1.c)
add_executable(task2 exercise3/task2.c)
add_executable(task3 exercise3/task3.c)
add_executable(task4 exercise3/task4.c)
add_executable(task5 exercise3/task5.c)
add_executable(task6 exercise3/task6.c)
add_executable(task7 exercise3/task7.c)
add_executable(task8 exercise3/task8.c)

add_executable(CMakeLists CMakeLists.txt)